Se cambian rutas y se agrega componente terrazo

--- a/package.json
+++ b/package.json
@@ -1,42 +1,43 @@
 {
-  "name": "mosaicosnava",
-  "version": "1.0.0.0",
-  "private": true,
-  "license": "MIT",
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-responsive-carousel": "^3.2.22",
-    "react-scripts": "5.0.0",
-    "react-social-icons": "^5.11.0",
-    "react-spa-prerender": "^1.0.14",
-    "web-vitals": "^2.1.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "set \"INLINE_RUNTIME_CHUNK=false\" && set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "mosaicosnava",
+    "version": "1.0.0.0",
+    "private": true,
+    "license": "MIT",
+    "dependencies": {
+        "@testing-library/jest-dom": "^5.14.1",
+        "@testing-library/react": "^12.0.0",
+        "@testing-library/user-event": "^13.2.1",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-responsive-carousel": "^3.2.22",
+        "react-scripts": "5.0.0",
+        "react-social-icons": "^5.11.0",
+        "react-spa-prerender": "^1.0.14",
+        "web-vitals": "^2.1.0"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "set \"INLINE_RUNTIME_CHUNK=false\" && set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "postbuild": "react-spa-prerender"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
