--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^12.0.0",
         "@testing-library/user-event": "^13.2.1",
+        "dompurify": "^2.3.6",
         "patch-package": "^6.4.7",
         "preload-webpack-plugin": "3.0.0-beta.3",
         "react": "^17.0.2",
         "react-bootstrap": "^2.2.1",
         "react-dom": "^17.0.2",
-        "react-grid-gallery": "^0.5.5",
+        "react-image-gallery": "^1.2.7",
         "react-scripts": "5.0.0",
         "react-social-icons": "^5.11.0",
         "react-spa-prerender": "^1.0.14",
