--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "react-bootstrap": "^2.2.1",
         "react-dom": "^17.0.2",
         "react-image-gallery": "^1.2.7",
+        "react-responsive-carousel": "^3.2.23",
         "react-scripts": "5.0.0",
         "react-social-icons": "^5.11.0",
         "react-spa-prerender": "^1.0.14",
